--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img id = "divider-image" src="./images/pattern-divider-desktop.svg" alt="pattern-divider-img">
       </div>
   
-      <button onclick="generateQuote()" class="quote__button">
-        <img src="./images/icon-dice.svg" alt="">
+      <button onclick="generateQuote()" class="quote__button" aria-label="Generate Quote">
+        <img src="./images/icon-dice.svg" alt="icon-dice">
       </button>
     </article>
   </main>
